--- a/page.html
+++ b/page.html
@@ -28,42 +28,16 @@
   <body>
     <header class="header">
       <div class="container">
-        <div class="header-inner"><a class="logo" href="#">LoremIpsum.<span>Net</span></a>
-          <ul class="nav">
-            <li class="nav-item"><a class="nav-item__link" href="#">Бизнес</a></li>
-            <li class="nav-item"><a class="nav-item__link" href="#target-about">О нас</a></li>
-            <li class="nav-item"><a class="nav-item__link" href="#">Цены</a></li>
-            <li class="nav-item"><a class="nav-item__link" href="#target-order">Оформить заказ</a></li>
-          </ul>
+        <div class="header-inner">
+          <ul class="menu">
+            <li class="menu__item"><a class="menu__link" href="/"><span>Поездки</span></a></li>
+          </ul><a class="login" href="/"><span class="login__inner"><span class="login__name">Заболоцкий К.О</span><span class="login__icon">
+                <svg>
+                  <use xlink:href="img/sprites/sprite.svg#logout"></use>
+                </svg></span></span></a>
         </div>
       </div>
     </header>
-    <footer class="footer">
-      <div class="container">
-        <div class="footer-inner">
-          <p class="footer__copyright">© 2018 «LOREMIPSUM.NET» Все права защищены.</p>
-          <div class="footer-items">
-            <div class="footer-item"><span class="footer-link"><span class="footer-link__icon">
-                  <svg>
-                    <use xlink:href="img/sprites/sprite.svg#qiwi"></use>
-                  </svg></span>QIWI wallet</span><span class="footer-link"><span class="footer-link__icon">
-                  <svg>
-                    <use xlink:href="img/sprites/sprite.svg#ym"></use>
-                  </svg></span>Yandex Money</span><span class="footer-link"><span class="footer-link__icon">
-                  <svg>
-                    <use xlink:href="img/sprites/sprite.svg#wm"></use>
-                  </svg></span>Web Money</span></div>
-            <div class="footer-item"><a class="footer-link" href="mailto:info@ipsum228.com"><span class="footer-link__icon">
-                  <svg>
-                    <use xlink:href="img/sprites/sprite.svg#email"></use>
-                  </svg></span>info@ipsum228.com</a><a class="footer-link" href="#"><span class="footer-link__icon">
-                  <svg>
-                    <use xlink:href="img/sprites/sprite.svg#vk"></use>
-                  </svg></span>Мы вконтакте</a></div>
-          </div>
-        </div>
-      </div>
-    </footer>
     <script src="js/vendor.min.js"></script>
   </body>
 </html>
