--- a/page.html
+++ b/page.html
@@ -28,16 +28,68 @@
   <body>
     <header class="header">
       <div class="container">
-        <div class="header-inner">
-          <ul class="menu">
-            <li class="menu__item"><a class="menu__link" href="/"><span>Поездки</span></a></li>
-          </ul><a class="login" href="/"><span class="login__inner"><span class="login__name">Заболоцкий К.О</span><span class="login__icon">
-                <svg>
-                  <use xlink:href="img/sprites/sprite.svg#logout"></use>
-                </svg></span></span></a>
+        <div class="header-inner"><a class="logo" href="#"><span class="logo__icon"><img src="img/logo.png"></span>
+            <div class="logo__text"><span class="logo__title">FairyFix</span><span class="logo__desc">Jsme víc než jen úklidová služba</span></div></a>
+          <div class="header-right">
+            <div class="header-right__line">
+              <div class="header-links">
+                <div class="header-links__col"><a class="header-link" href="tel:+420602485000"><span class="header-link__icon"><img src="img/h-icon-1.png"></span><span class="header-link__text">+420 602 485 000</span></a></div>
+                <div class="header-links__col"><a class="header-link" href="mailto:info@fairyfix.cz"><span class="header-link__icon"><img src="img/h-icon-2.png"></span><span class="header-link__text">info@fairyfix.cz</span></a></div>
+              </div>
+              <div class="choice header-choice">
+                <input type="checkbox" name="choice" id="choice">
+                <label for="choice"><span class="choice-circle"></span>
+                  <div class="choice-items"><span class="choice-item">cz</span><span class="choice-item">en</span></div>
+                </label>
+              </div>
+            </div>
+            <div class="header-right__line sidebar js-sidebar">
+              <div class="choice sidebar-choice">
+                <input type="checkbox" name="choice" id="choiceSidebar">
+                <label for="choiceSidebar"><span class="choice-circle"></span>
+                  <div class="choice-items"><span class="choice-item">cz</span><span class="choice-item">en</span></div>
+                </label>
+              </div>
+              <ul class="nav">
+                <li class="nav-item"><a class="nav-item__link" href="#">Domů</a></li>
+                <li class="nav-item"><a class="nav-item__link" href="#">Nabídka Služeb</a>
+                  <ul class="sub-nav">
+                    <li class="sub-nav__item"><a class="sub-nav__link" href="#">Nabídka Služeb</a></li>
+                    <li class="sub-nav__item"><a class="sub-nav__link" href="#">Nabídka Služeb 2</a></li>
+                    <li class="sub-nav__item"><a class="sub-nav__link" href="#">Nabídka Služeb 3</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item"><a class="nav-item__link" href="#">Fairyfix doporučuje</a></li>
+                <li class="nav-item"><a class="nav-item__link" href="#">Kariéra</a></li>
+              </ul>
+            </div><span class="burger js-burger"><img src="img/sidebar.png"></span>
+          </div>
         </div>
       </div>
     </header>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-row">
+          <div class="footer-col">
+            <p class="footer__copyright">Fairyfix – Profesionální služby s důrazem na kvalitu, spolehlivost a ekologická řešení. <br> Vaše spokojenost je naší prioritou.</p>
+          </div>
+          <div class="footer-col">
+            <div class="footer-col__center">
+              <div class="footer-col__center-inner">
+                <p>KONTAKTUJTE NÁS</p>
+                <div class="footer-links">
+                  <div class="footer-links__line"><a class="footer-link" href="tel:+420602485000"><span class="footer-link__icon"><img src="img/f-icon-1.png"></span><span class="footer-link__text">+420 602 485 000</span></a></div>
+                  <div class="footer-links__line"><a class="footer-link" href="mailto:info@fairyfix"><span class="footer-link__icon"><img src="img/f-icon-2.png"></span><span class="footer-link__text">info@fairyfix</span></a></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="footer-col">
+            <p class="footer__copyright">MalikaGlobal s.r.o.     IČ: 22264213<br>Kontaktujte nás nyní pro cenovou nabídku na konzultaci.<br>GDPR / Všeobecné obchodní podmínky</p>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="js/vendor.min.js"></script>
   </body>
 </html>
