--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
       <div class="page-wrapper">
         <section class="hello s-white">
           <div class="hello__bg bg-cover"><img src="img/bg-hello.jpg"></div>
+          <div class="hello__mask">
+            <svg width="1440" height="155" viewbox="0 0 1440 155" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M-45.8421 49.8363L-45.8128 57.8994L-45.8084 59.1003C-45.6156 112.119 -2.47885 154.943 50.5401 154.75L1502.54 149.469L1499.25 32.7873L1499.22 1.9136C1499.22 1.36204 1498.78 0.914976 1498.23 0.914403L1478.7 0.89412L1310.44 1.50619L1048 5L967.597 11.481L887.5 20.5L725 44L508.84 72.355L441.928 75.4659L385.263 75.3904L268.733 64.3788L161.243 47.6166L51.1567 28.9579L-6.57617 17.508C-12.0372 16.425 -17.6925 16.7486 -22.9957 18.4432C-29.4969 20.5206 -35.1999 24.5761 -39.2909 30.039C-43.5683 35.7507 -45.8681 42.7006 -45.8421 49.8363Z" fill="#DFD3BD"></path>
+            </svg>
+          </div>
           <div class="container">
             <div class="hello-inner" data-aos="fade-up" data-aos-duration="1200">
               <h1>Privátní sauna 24/7 v centru Prahy</h1>
@@ -116,28 +121,28 @@
             <div class="services-items">
               <div class="services-row">
                 <div class="services-col" data-aos="fade-up" data-aos-duration="1200"><a class="services-item" href="/">
-                    <div class="services-item__icon"></div>
+                    <div class="services-item__icon"><img src="img/s-1.svg"></div>
                     <div class="services-item__bottom">
                       <div class="services-item__text">
                         <p>Absolutní soukromí – celá sauna jen pro vás</p>
                       </div>
                     </div></a></div>
                 <div class="services-col" data-aos="fade-up" data-aos-duration="1200"><a class="services-item" href="/">
-                    <div class="services-item__icon"></div>
+                    <div class="services-item__icon"><img src="img/s-4.svg"></div>
                     <div class="services-item__bottom">
                       <div class="services-item__text">
                         <p>Skvělá poloha – přímo v centru Prahy</p>
                       </div>
                     </div></a></div>
                 <div class="services-col" data-aos="fade-up" data-aos-duration="1200"><a class="services-item" href="/">
-                    <div class="services-item__icon"></div>
+                    <div class="services-item__icon"><img src="img/s-3.svg"></div>
                     <div class="services-item__bottom">
                       <div class="services-item__text">
                         <p>Vždy čistá a připravená – hygienu bereme vážně</p>
                       </div>
                     </div></a></div>
                 <div class="services-col" data-aos="fade-up" data-aos-duration="1200"><a class="services-item" href="/">
-                    <div class="services-item__icon"></div>
+                    <div class="services-item__icon"><img src="img/s-2.svg"></div>
                     <div class="services-item__bottom">
                       <div class="services-item__text">
                         <p>Flexibilní rezervace – vyberte si čas, který vám sedí Možnost přenocování</p>
@@ -333,6 +338,7 @@
           </div>
         </section>
         <section class="price">
+          <div class="price__bg"><img src="img/bg-price.png"></div>
           <div class="container">
             <div class="price-items" data-aos="fade-up" data-aos-duration="1200">
               <div class="price-row">
@@ -383,28 +389,28 @@
             </div>
             <div class="services-row">
               <div class="services-col" data-aos="fade-up" data-aos-duration="1200"><a class="services-item" href="/">
-                  <div class="services-item__icon"></div>
+                  <div class="services-item__icon"><img src="img/s-7.svg"></div>
                   <div class="services-item__bottom">
                     <div class="services-item__text">
                       <p>Umístění v centru Prahy Provoz 24/7</p>
                     </div>
                   </div></a></div>
               <div class="services-col" data-aos="fade-up" data-aos-duration="1200"><a class="services-item" href="/">
-                  <div class="services-item__icon"></div>
+                  <div class="services-item__icon"><img src="img/s-6.svg"></div>
                   <div class="services-item__bottom">
                     <div class="services-item__text">
                       <p>Parkovací zóny v okolí placené i bezplatné</p>
                     </div>
                   </div></a></div>
               <div class="services-col" data-aos="fade-up" data-aos-duration="1200"><a class="services-item" href="/">
-                  <div class="services-item__icon"></div>
+                  <div class="services-item__icon"><img src="img/s-5.svg"></div>
                   <div class="services-item__bottom">
                     <div class="services-item__text">
                       <p>Zóna pro relaxaci: postel, stůl, křesla</p>
                     </div>
                   </div></a></div>
               <div class="services-col" data-aos="fade-up" data-aos-duration="1200"><a class="services-item" href="/">
-                  <div class="services-item__icon"></div>
+                  <div class="services-item__icon"><img src="img/s-3.svg"></div>
                   <div class="services-item__bottom">
                     <div class="services-item__text">
                       <p>Čistota je pro nás prioritou Po každém klientovi saunu intenzivně čistíme celou hodinu</p>
@@ -489,7 +495,7 @@
             <div class="footer-links">
               <div class="footer-links__line"><a class="footer-link" href="/"><span class="footer-link__icon">
                     <svg>
-                      <use xlink:href="img/sprites/sprite.svg#map-f"></use>
+                      <use xlink:href="img/sprites/sprite.svg#map"></use>
                     </svg></span><span class="footer-link__text">Fügnerovo nám. 5, Nové Město, Vinohrady, Praha 2</span></a></div>
               <div class="footer-links__line"><a class="footer-link" href="tel:+420602 566 690"><span class="footer-link__icon">
                     <svg>
@@ -497,7 +503,7 @@
                     </svg></span><span class="footer-link__text">+420 602 566 690</span></a></div>
               <div class="footer-links__line"><a class="footer-link" href="/"><span class="footer-link__icon">
                     <svg>
-                      <use xlink:href="img/sprites/sprite.svg#time-f"></use>
+                      <use xlink:href="img/sprites/sprite.svg#time"></use>
                     </svg></span><span class="footer-link__text">Otevřeno Nonstop</span></a></div>
               <div class="footer-links__line"><a class="footer-link" href="/"><span class="footer-link__icon">
                     <svg>
