--- a/page.html
+++ b/page.html
@@ -117,7 +117,7 @@
           <div class="footer-links">
             <div class="footer-links__line"><a class="footer-link" href="/"><span class="footer-link__icon">
                   <svg>
-                    <use xlink:href="img/sprites/sprite.svg#map-f"></use>
+                    <use xlink:href="img/sprites/sprite.svg#map"></use>
                   </svg></span><span class="footer-link__text">Fügnerovo nám. 5, Nové Město, Vinohrady, Praha 2</span></a></div>
             <div class="footer-links__line"><a class="footer-link" href="tel:+420602 566 690"><span class="footer-link__icon">
                   <svg>
@@ -125,7 +125,7 @@
                   </svg></span><span class="footer-link__text">+420 602 566 690</span></a></div>
             <div class="footer-links__line"><a class="footer-link" href="/"><span class="footer-link__icon">
                   <svg>
-                    <use xlink:href="img/sprites/sprite.svg#time-f"></use>
+                    <use xlink:href="img/sprites/sprite.svg#time"></use>
                   </svg></span><span class="footer-link__text">Otevřeno Nonstop</span></a></div>
             <div class="footer-links__line"><a class="footer-link" href="/"><span class="footer-link__icon">
                   <svg>
