--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="header-links__col"><a class="header-link" href="/"><span class="header-link__icon">
                       <svg>
                         <use xlink:href="img/sprites/sprite.svg#map"></use>
-                      </svg></span><span class="header-link__text">Fügnerovo nám. 5, Nové Město, Vinohrady, Praha 2</span></a></div>
+                      </svg></span><span class="header-link__text">Fügnerovo nám. 5, Vinohrady, Praha 2</span></a></div>
                 <div class="header-links__col"><span class="header-link"><span class="header-link__icon">
                       <svg>
                         <use xlink:href="img/sprites/sprite.svg#time"></use>
@@ -101,11 +101,7 @@
       <div class="page-wrapper">
         <section class="hello s-white">
           <div class="hello__bg bg-cover"><img src="img/bg-hello.jpg"></div>
-          <div class="hello__mask">
-            <svg width="1440" height="155" viewbox="0 0 1440 155" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M-45.8421 49.8363L-45.8128 57.8994L-45.8084 59.1003C-45.6156 112.119 -2.47885 154.943 50.5401 154.75L1502.54 149.469L1499.25 32.7873L1499.22 1.9136C1499.22 1.36204 1498.78 0.914976 1498.23 0.914403L1478.7 0.89412L1310.44 1.50619L1048 5L967.597 11.481L887.5 20.5L725 44L508.84 72.355L441.928 75.4659L385.263 75.3904L268.733 64.3788L161.243 47.6166L51.1567 28.9579L-6.57617 17.508C-12.0372 16.425 -17.6925 16.7486 -22.9957 18.4432C-29.4969 20.5206 -35.1999 24.5761 -39.2909 30.039C-43.5683 35.7507 -45.8681 42.7006 -45.8421 49.8363Z" fill="#DFD3BD"></path>
-            </svg>
-          </div>
+          <div class="hello__mask"><img src="img/mask-hello.svg"></div>
           <div class="container">
             <div class="hello-inner" data-aos="fade-up" data-aos-duration="1200">
               <h1>Privátní sauna 24/7 v centru Prahy</h1>
@@ -161,20 +157,11 @@
               </div>
             </div>
             <div class="gallery-items">
-              <div class="gallery-grid">
-                <div class="gallery-item" data-aos="fade-up" data-aos-duration="1200">
-                  <div class="gallery-item__bg bg-cover"><img src="img/g-1.jpg"></div>
-                </div>
-                <div class="gallery-item" data-aos="fade-up" data-aos-duration="1200">
-                  <div class="gallery-item__bg bg-cover"><img src="img/g-2.jpg"></div>
-                </div>
-                <div class="gallery-item gallery-item--large" data-aos="fade-up" data-aos-duration="1200">
-                  <div class="gallery-item__bg bg-cover"><img src="img/g-3.jpg"></div>
-                </div>
-                <div class="gallery-item gallery-item--long" data-aos="fade-up" data-aos-duration="1200">
-                  <div class="gallery-item__bg bg-cover"><img src="img/g-4.jpg"></div>
-                </div>
-              </div>
+              <div class="gallery-grid js-gallery"><a class="gallery-item" href="img/g-1.jpg" data-aos="fade-up" data-aos-duration="1200">
+                  <div class="gallery-item__bg bg-cover"><img src="img/g-1.jpg"></div></a><a class="gallery-item" href="img/g-2.jpg" data-aos="fade-up" data-aos-duration="1200">
+                  <div class="gallery-item__bg bg-cover"><img src="img/g-2.jpg"></div></a><a class="gallery-item gallery-item--large" href="img/g-3.jpg" data-aos="fade-up" data-aos-duration="1200">
+                  <div class="gallery-item__bg bg-cover"><img src="img/g-3.jpg"></div></a><a class="gallery-item gallery-item--long" href="img/g-4.jpg" data-aos="fade-up" data-aos-duration="1200">
+                  <div class="gallery-item__bg bg-cover"><img src="img/g-4.jpg"></div></a></div>
             </div>
             <div class="gallery-more">
               <button class="btn btn--light-brown btn--big" type="button" data-micromodal-trigger="modal-1" role="button"><span>Rezervace</span></button>
@@ -460,7 +447,7 @@
                       </div>
                     </div>
                     <div class="steps-col">
-                      <div class="steps-item">
+                      <div class="steps-item steps-item--active">
                         <div class="steps-item__count">04</div>
                         <div class="steps-item__text">
                           <p>Vaše soukromí je pro nás prioritou — vše řešíme osobně, rychle a diskrétně.</p>
@@ -478,7 +465,7 @@
       <footer class="footer">
         <div class="container">
           <div class="footer-top">
-            <div class="footer-logo"><a class="logo" href="#"><span class="logo__icon"><img src="img/logo-f.svg"></span></a></div>
+            <div class="footer-logo"><a class="logo" href="#"><span class="logo__icon"><img src="img/logo.svg"></span></a></div>
             <ul class="footer-nav">
               <li class="footer-nav__item"><a class="footer-nav__link" href="#">Úvod</a></li>
               <li class="footer-nav__item"><a class="footer-nav__link" href="#">Naše sauna</a></li>
