--- a/page.html
+++ b/page.html
@@ -34,7 +34,7 @@
               <div class="header-links__col"><a class="header-link" href="/"><span class="header-link__icon">
                     <svg>
                       <use xlink:href="img/sprites/sprite.svg#map"></use>
-                    </svg></span><span class="header-link__text">Fügnerovo nám. 5, Nové Město, Vinohrady, Praha 2</span></a></div>
+                    </svg></span><span class="header-link__text">Fügnerovo nám. 5, Vinohrady, Praha 2</span></a></div>
               <div class="header-links__col"><span class="header-link"><span class="header-link__icon">
                     <svg>
                       <use xlink:href="img/sprites/sprite.svg#time"></use>
@@ -100,7 +100,7 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-top">
-          <div class="footer-logo"><a class="logo" href="#"><span class="logo__icon"><img src="img/logo-f.svg"></span></a></div>
+          <div class="footer-logo"><a class="logo" href="#"><span class="logo__icon"><img src="img/logo.svg"></span></a></div>
           <ul class="footer-nav">
             <li class="footer-nav__item"><a class="footer-nav__link" href="#">Úvod</a></li>
             <li class="footer-nav__item"><a class="footer-nav__link" href="#">Naše sauna</a></li>
