--- a/index.html
+++ b/index.html
@@ -332,8 +332,8 @@
                 <div class="price-col">
                   <div class="price-item">
                     <div class="price-item__title">Balíček</div>
-                    <div class="price-item__line">2 hodiny (Po–Čt)</div>
-                    <div class="price-item__line">2 hodiny (Pá–Ne)</div>
+                    <div class="price-item__line">2 hodiny <span>(Po–Čt)</span></div>
+                    <div class="price-item__line">2 hodiny <span>(Pá–Ne)</span></div>
                     <div class="price-item__line">Celá noc (21:00–8:00)</div>
                   </div>
                 </div>
