--- a/page.html
+++ b/page.html
@@ -137,7 +137,9 @@
                       <input class="form-input js-mask-phone" type="tel" id="phone" name="phone" placeholder="+7">
                     </div>
                     <div class="reviews-form__input"><span class="form-input__label">Ваша оценка</span>
-                      <div class="stars js-stars" data-raty></div>
+                      <div class="stars js-stars" data-raty>
+                        <input class="js-stars-hidden" type="hidden" id="stars">
+                      </div>
                     </div>
                     <div class="reviews-form__input">
                       <label class="form-input__label" for="message">Комментарий <sup>*</sup></label>
