--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                   </div>
                 </div>
                 <div class="header-choice">
-                  <div class="choice">
-                    <div class="choice-inner"><span class="choice__icon">
-                        <svg>
-                          <use xlink:href="img/sprites/sprite.svg#whatsapp"></use>
-                        </svg></span><span>CZ</span><span class="choice__arrow">
+                  <div class="choice"><a class="choice__icon" href="/">
+                      <svg>
+                        <use xlink:href="img/sprites/sprite.svg#whatsapp"></use>
+                      </svg></a>
+                    <div class="choice-inner js-choice"><span>CZ</span><span class="choice__arrow">
                         <svg>
                           <use xlink:href="img/sprites/sprite.svg#arrow"></use>
                         </svg></span></div>
