--- a/services.html
+++ b/services.html
@@ -79,15 +79,17 @@
                       <svg>
                         <use xlink:href="img/sprites/sprite.svg#whatsapp"></use>
                       </svg></a>
-                    <div class="choice-inner js-choice"><span>CZ</span><span class="choice__arrow">
-                        <svg>
-                          <use xlink:href="img/sprites/sprite.svg#arrow"></use>
-                        </svg></span></div>
-                    <ul class="sub-nav">
-                      <li class="sub-nav__item"><a class="sub-nav__link" href="#">CZ</a></li>
-                      <li class="sub-nav__item"><a class="sub-nav__link" href="#">CZ</a></li>
-                      <li class="sub-nav__item"><a class="sub-nav__link" href="#">CZ</a></li>
-                    </ul>
+                    <div class="choice-wrapper">
+                      <div class="choice-inner js-choice"><span>CZ</span><span class="choice__arrow">
+                          <svg>
+                            <use xlink:href="img/sprites/sprite.svg#arrow"></use>
+                          </svg></span></div>
+                      <ul class="sub-nav">
+                        <li class="sub-nav__item"><a class="sub-nav__link" href="#">CZ</a></li>
+                        <li class="sub-nav__item"><a class="sub-nav__link" href="#">CZ</a></li>
+                        <li class="sub-nav__item"><a class="sub-nav__link" href="#">CZ</a></li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
                 <div class="header-button">
